--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+<h1>Welcome to the Happy Monday Marketplace</h1>
+<p>The mensgear marketplace</p>
+
+<%= link_to "Books", "#", class: "btn btn-primary btn-lg" %>
+<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+
+</div>
