--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,3 +6,9 @@
 <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 
 </div>
+
+<div class="row">
+
+<%= render @books %>
+
+</div>
