--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
 
 <div class="container">
 <% flash.each do |type, message| %>
-<div class="alert alert-info fade-in">
-	<button class="close" data-dismiss="alert">x</button>
+<div class="alert alert-info alert-dismissible fade-in" role="alert">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times</span></button>
 	<%= message %>
 </div>
 <% end %>
